[project]
name = "ttt"
version = "0.10.0"
description = "Watch, Build, Test"
authors = [{name = "yerejm"}]
license = "ISCL"
readme = "README.rst"
keywords = ["ttt"]
classifiers= [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/yerejm/ttt"
repository = "https://github.com/yerejm/ttt"

[tool.poetry.group.main.dependencies]
python = "^3.8.1"
python-termstyle = "^0.1.10"
colorama = "^0.4.4"
argh = "^0.26.2"
importlib-metadata = {version = "^7.0.0", python = "<3.8"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
testfixtures = "^7.2.2"
coverage = "^7.3.4"
black = "^24.3.0"
flake8 = "^6.1.0"
# pin bandit for TypeError: __init__() missing 1 required positional argument: 'metrics' error 
bandit = "1.7.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^23.12.2"
flake8-import-order = "^0.18.1"
safety = "^2.3.5"
poetry-plugin-export = "^1.6.0"
deptry = "^0.16.1"

[tool.poetry.scripts]
ttt = 'ttt.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ttt"]

[tool.coverage.report]
show_missing = true

