[project]
name = "ttt"
version = "0.10.0"
description = "Watch, Build, Test"
authors = [{name = "yerejm"}]
license = "ISCL"
readme = "README.rst"
keywords = ["ttt"]
classifiers= [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/yerejm/ttt"
repository = "https://github.com/yerejm/ttt"

[tool.poetry.group.main.dependencies]
python = "^3.11"
# unmaintained
python-termstyle = "^0.1.10"
colorama = "^0.4.6"
argh = "=0.30.5" # argh has breaking changes after this version
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-xdist = "^3.8.0"
pytest-cov = "^7.0.0"
testfixtures = "^9.2.0"
coverage = "^7.11.0"
black = "^25.9.0"
flake8 = "^7.3.0"
bandit = "1.8.6"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.10.21"
flake8-import-order = "^0.19.2"
safety = "^3.6.2"
poetry-plugin-export = "^1.9.0"
deptry = "^0.23.1"

[tool.poetry.scripts]
ttt = 'ttt.__main__:main'

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ttt"]

[tool.coverage.report]
show_missing = true

